# libcli

./: .gitignore  LICENSE  meson.build
src/: cmd.c  cmd.h  cmdln.c  cmdln.h  common.h  info.h  meson.build
tests/: meson.build  test-cmd.c  test-cmdln.c  test-map.c  test_utils.c  tests.h
